--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation "androidx.browser:browser:1.4.0"
     implementation 'com.google.android.material:material:1.4.0'
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
 
 }
